--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,10 @@
     <string name="action_sign_in">Iniciar sesión o registrarse</string>
     <string name="action_sign_in_short">Iniciar sesión</string>
     <string name="welcome">¡Bienvenido!</string>
-    <string name="invalid_username">Nombre de usuario no válido</string>
-    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
+    <string name="error_invalid_username">Nombre de usuario inválido.</string>
+    <string name="error_invalid_password">Contraseña inválida.</string>
+    <string name="error_invalid_credentials">Credenciales inválidas. Por favor, inténtalo de nuevo.</string>
+
     <string name="login_failed">Inicio de sesión fallido</string>
     <string name="title_activity_login">Appostados</string>
     <string name="title_activity_home_user">HomeUser</string>
@@ -19,13 +21,12 @@
     <string name="age">Age</string>
 
     <string name="register_title">Registro</string>
-    <string name="name">Nombre</string>
-    <string name="last_name_1">Primer Apellido</string>
-    <string name="last_name_2">Segundo Apellido</string>
-    <string name="birthdate">Fecha de Nacimiento</string>
-    <string name="email">Correo Electrónico</string>
+    <string name="userName">Nombre</string>
+    <string name="last_names">Apellido/s</string>
+    <string name="birthdate">Fecha de nacimiento</string>
+    <string name="email">Correo electrónico</string>
     <string name="password">Contraseña</string>
     <string name="register">Registrar</string>
-    <string name="profile_picture">Foto de Perfil</string>
+    <string name="profile_picture">Foto de perfil(opcional)</string>
 
 </resources>
